updated response message and beginning to work on client side api requests

--- a/main_app/static/styles/4-common.css
+++ b/main_app/static/styles/4-common.css
@@ -35,9 +35,15 @@ div.container {
 
 /** MAIN INPUT FORM **/
 
-.error_message {
+.instructions {
     text-align: center;
     font-size: 14px;
+}
+
+.response_message {
+    text-align: center;
+    font-size: 18px;
+    color: #FF0000;
 }
 
 h2.text-center {
