--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -45,12 +45,12 @@
           </DIV>
         </form>
       </DIV>
-      <p class="error_message">
+      <p class="instructions">
 	To test, you may login with credentials:
 	<br>un: 'test@user.com' pw: 'testuser'
 	<br>(quotes are not a part of the credential)</p>
       {% if message is not none %}
-      <p class="error_message">{{ message }}</p>
+      <p class="response_message">{{ message }}</p>
       {% endif %}
     </DIV>
   </DIV>
