--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -19,6 +19,9 @@
 
     <SCRIPT src="{{ url_for('static', filename='scripts/jquery-3.2.1.min.js') }}"></SCRIPT>
 
+    <!-- IMAGES JS -->
+    <SCRIPT src="{{ url_for('static', filename='scripts/images.js') }}?{{ cache_id }}"></SCRIPT>
+
     <!-- **********************
 	 CSS styles
 	 ********************** -->
