--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -6,7 +6,7 @@
 
     <META charset="utf-8">
     <META name="viewport" content="width=device-width">
-    <title>Holberton AirBnB</title>
+    <title>Bootcamp AirBnB</title>
 
     <!-- FAVICON -->
 
@@ -82,7 +82,7 @@
     <!-- FOOTER -->
 
     <footer>
-      Holberton School
+      Bootcamp School
     </footer>
   </BODY>
 </HTML>
