--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -82,7 +82,7 @@
     <!-- FOOTER -->
 
     <footer>
-      Bootcamp School
+      a software development program
     </footer>
   </BODY>
 </HTML>
